@@ -130,9 +130,10 @@ They are transformed from section titles after parsing. -->
 <li><a class="reference" href="#rowspanning-tables" id="id67" name="id67">2.20&nbsp;&nbsp;&nbsp;Rowspanning tables</a></li>
 <li><a class="reference" href="#complex-tables" id="id68" name="id68">2.21&nbsp;&nbsp;&nbsp;Complex tables</a></li>
 <li><a class="reference" href="#list-tables" id="id69" name="id69">2.22&nbsp;&nbsp;&nbsp;List Tables</a></li>
+<li><a class="reference" href="#custom-roles" id="id70" name="id70">2.23&nbsp;&nbsp;&nbsp;Custom Roles</a></li>
 </ul>
 </li>
-<li><a class="reference" href="#error-handling" id="id70" name="id70">3&nbsp;&nbsp;&nbsp;Error Handling</a></li>
+<li><a class="reference" href="#error-handling" id="id71" name="id71">3&nbsp;&nbsp;&nbsp;Error Handling</a></li>
 </ul>
 </div>
 <div class="section">
@@ -477,7 +478,7 @@ Here's a reference to the next footnote: <a class="footnote-reference" href="#id
 <colgroup><col class="label" /><col /></colgroup>
 <tbody valign="top">
 <tr><td class="label"><a name="id15">[4]</a></td><td>Here's an unreferenced footnote, with a reference to a
-nonexistent footnote: <a href="#id79" name="id80"><span class="problematic" id="id80"><span id="id16"></span>[5]_</span></a>.</td></tr>
+nonexistent footnote: <a href="#id80" name="id81"><span class="problematic" id="id81"><span id="id16"></span>[5]_</span></a>.</td></tr>
 </tbody>
 </table>
 </div>
@@ -490,7 +491,7 @@ nonexistent footnote: <a href="#id79" name="id80"><span class="problematic" id="
 rendered separately and differently from footnotes.</td></tr>
 </tbody>
 </table>
-<p>Here's a reference to the above, <a class="citation-reference" href="#cit2002" id="id17" name="id17">[CIT2002]</a>, and a <a href="#id81" name="id82"><span class="problematic" id="id82"><span id="id18"></span>[nonexistent]_</span></a>
+<p>Here's a reference to the above, <a class="citation-reference" href="#cit2002" id="id17" name="id17">[CIT2002]</a>, and a <a href="#id82" name="id83"><span class="problematic" id="id83"><span id="id18"></span>[nonexistent]_</span></a>
 citation.</p>
 </div>
 <div class="section">
@@ -504,7 +505,7 @@ hyperlink targets</a> are also possible.</p>
 &quot;<a class="reference" href="http://www.python.org/">Python</a> <a class="footnote-reference" href="#id25" id="id27" name="id27">[5]</a>&quot;.</p>
 <p>Targets may be indirect and anonymous.  Thus <a class="reference" href="#id22">this phrase</a> may also
 refer to the <a class="reference" href="#id22">Targets</a> section.</p>
-<p>Here's a <a href="#id83" name="id84"><span class="problematic" id="id84">`hyperlink reference without a target`_</span></a>, which generates an
+<p>Here's a <a href="#id84" name="id85"><span class="problematic" id="id85">`hyperlink reference without a target`_</span></a>, which generates an
 error.</p>
 <div class="section">
 <h3><a class="toc-backref" href="#id51" id="duplicate-target-names" name="duplicate-target-names">2.13.1&nbsp;&nbsp;&nbsp;Duplicate Target Names</a></h3>
@@ -516,34 +517,34 @@ explicit targets will generate &quot;warning&quot; (level-2) system messages.</p
 <h3><a class="toc-backref" href="#id52" id="id20" name="id20">2.13.2&nbsp;&nbsp;&nbsp;Duplicate Target Names</a></h3>
 <p>Since there are two &quot;Duplicate Target Names&quot; section headers, we
 cannot uniquely refer to either of them by name.  If we try to (like
-this: <a href="#id85" name="id86"><span class="problematic" id="id86">`Duplicate Target Names`_</span></a>), an error is generated.</p>
+this: <a href="#id86" name="id87"><span class="problematic" id="id87">`Duplicate Target Names`_</span></a>), an error is generated.</p>
 </div>
 </div>
 <div class="section">
 <h2><a class="toc-backref" href="#id53" id="directives" name="directives">2.14&nbsp;&nbsp;&nbsp;Directives</a></h2>
 <div class="contents local topic">
 <ul class="auto-toc simple">
-<li><a class="reference" href="#document-parts" id="id71" name="id71">2.14.1&nbsp;&nbsp;&nbsp;Document Parts</a></li>
-<li><a class="reference" href="#images" id="id72" name="id72">2.14.2&nbsp;&nbsp;&nbsp;Images</a></li>
-<li><a class="reference" href="#admonitions" id="id73" name="id73">2.14.3&nbsp;&nbsp;&nbsp;Admonitions</a></li>
-<li><a class="reference" href="#topics-sidebars-and-rubrics" id="id74" name="id74">2.14.4&nbsp;&nbsp;&nbsp;Topics, Sidebars, and Rubrics</a></li>
-<li><a class="reference" href="#target-footnotes" id="id75" name="id75">2.14.5&nbsp;&nbsp;&nbsp;Target Footnotes</a></li>
-<li><a class="reference" href="#replacement-text" id="id76" name="id76">2.14.6&nbsp;&nbsp;&nbsp;Replacement Text</a></li>
-<li><a class="reference" href="#compound-paragraph" id="id77" name="id77">2.14.7&nbsp;&nbsp;&nbsp;Compound Paragraph</a></li>
-<li><a class="reference" href="#parsed-literal-blocks" id="id78" name="id78">2.14.8&nbsp;&nbsp;&nbsp;Parsed Literal Blocks</a></li>
+<li><a class="reference" href="#document-parts" id="id72" name="id72">2.14.1&nbsp;&nbsp;&nbsp;Document Parts</a></li>
+<li><a class="reference" href="#images" id="id73" name="id73">2.14.2&nbsp;&nbsp;&nbsp;Images</a></li>
+<li><a class="reference" href="#admonitions" id="id74" name="id74">2.14.3&nbsp;&nbsp;&nbsp;Admonitions</a></li>
+<li><a class="reference" href="#topics-sidebars-and-rubrics" id="id75" name="id75">2.14.4&nbsp;&nbsp;&nbsp;Topics, Sidebars, and Rubrics</a></li>
+<li><a class="reference" href="#target-footnotes" id="id76" name="id76">2.14.5&nbsp;&nbsp;&nbsp;Target Footnotes</a></li>
+<li><a class="reference" href="#replacement-text" id="id77" name="id77">2.14.6&nbsp;&nbsp;&nbsp;Replacement Text</a></li>
+<li><a class="reference" href="#compound-paragraph" id="id78" name="id78">2.14.7&nbsp;&nbsp;&nbsp;Compound Paragraph</a></li>
+<li><a class="reference" href="#parsed-literal-blocks" id="id79" name="id79">2.14.8&nbsp;&nbsp;&nbsp;Parsed Literal Blocks</a></li>
 </ul>
 </div>
 <p>These are just a sample of the many reStructuredText Directives.  For
 others, please see
 <a class="reference" href="http://docutils.sourceforge.net/docs/ref/rst/directives.html">http://docutils.sourceforge.net/docs/ref/rst/directives.html</a>.</p>
 <div class="section">
-<h3><a class="toc-backref" href="#id71" id="document-parts" name="document-parts">2.14.1&nbsp;&nbsp;&nbsp;Document Parts</a></h3>
+<h3><a class="toc-backref" href="#id72" id="document-parts" name="document-parts">2.14.1&nbsp;&nbsp;&nbsp;Document Parts</a></h3>
 <p>An example of the &quot;contents&quot; directive can be seen above this section
 (a local, untitled table of <a class="reference" href="#contents">contents</a>) and at the beginning of the
 document (a document-wide <a class="reference" href="#table-of-contents">table of contents</a>).</p>
 </div>
 <div class="section">
-<h3><a class="toc-backref" href="#id72" id="images" name="images">2.14.2&nbsp;&nbsp;&nbsp;Images</a></h3>
+<h3><a class="toc-backref" href="#id73" id="images" name="images">2.14.2&nbsp;&nbsp;&nbsp;Images</a></h3>
 <p>An image directive (also clickable -- a hyperlink reference):</p>
 <a class="reference image-reference" href="#directives"><img alt="../../../docs/user/rst/images/title.png" class="class1 class2" src="../../../docs/user/rst/images/title.png" /></a>
 <p>Image with multiple IDs:</p>
@@ -617,7 +618,7 @@ This is the legend.</div>
 <img alt="../../../docs/user/rst/images/biohazard.png" src="../../../docs/user/rst/images/biohazard.png" style="height: 3cm;" />
 </div>
 <div class="section">
-<h3><a class="toc-backref" href="#id73" id="admonitions" name="admonitions">2.14.3&nbsp;&nbsp;&nbsp;Admonitions</a></h3>
+<h3><a class="toc-backref" href="#id74" id="admonitions" name="admonitions">2.14.3&nbsp;&nbsp;&nbsp;Admonitions</a></h3>
 <div class="attention">
 <p class="first admonition-title">Attention!</p>
 <p class="last">Directives at large.</p>
@@ -666,7 +667,7 @@ Reader discretion is strongly advised.</p>
 </div>
 </div>
 <div class="section">
-<h3><a class="toc-backref" href="#id74" id="topics-sidebars-and-rubrics" name="topics-sidebars-and-rubrics">2.14.4&nbsp;&nbsp;&nbsp;Topics, Sidebars, and Rubrics</a></h3>
+<h3><a class="toc-backref" href="#id75" id="topics-sidebars-and-rubrics" name="topics-sidebars-and-rubrics">2.14.4&nbsp;&nbsp;&nbsp;Topics, Sidebars, and Rubrics</a></h3>
 <div class="sidebar">
 <p class="first sidebar-title">Sidebar Title</p>
 <p class="sidebar-subtitle">Optional Subtitle</p>
@@ -683,7 +684,7 @@ background color.</p>
 <p class="rubric">This is a rubric</p>
 </div>
 <div class="section">
-<h3><a class="toc-backref" href="#id75" id="target-footnotes" name="target-footnotes">2.14.5&nbsp;&nbsp;&nbsp;Target Footnotes</a></h3>
+<h3><a class="toc-backref" href="#id76" id="target-footnotes" name="target-footnotes">2.14.5&nbsp;&nbsp;&nbsp;Target Footnotes</a></h3>
 <table class="docutils footnote" frame="void" id="id25" rules="none">
 <colgroup><col class="label" /><col /></colgroup>
 <tbody valign="top">
@@ -698,11 +699,11 @@ background color.</p>
 </table>
 </div>
 <div class="section">
-<h3><a class="toc-backref" href="#id76" id="replacement-text" name="replacement-text">2.14.6&nbsp;&nbsp;&nbsp;Replacement Text</a></h3>
+<h3><a class="toc-backref" href="#id77" id="replacement-text" name="replacement-text">2.14.6&nbsp;&nbsp;&nbsp;Replacement Text</a></h3>
 <p>I recommend you try <a class="reference" href="http://www.python.org/">Python, <em>the</em> best language around</a> <a class="footnote-reference" href="#id25" id="id28" name="id28">[5]</a>.</p>
 </div>
 <div class="section">
-<h3><a class="toc-backref" href="#id77" id="compound-paragraph" name="compound-paragraph">2.14.7&nbsp;&nbsp;&nbsp;Compound Paragraph</a></h3>
+<h3><a class="toc-backref" href="#id78" id="compound-paragraph" name="compound-paragraph">2.14.7&nbsp;&nbsp;&nbsp;Compound Paragraph</a></h3>
 <div class="some-class compound">
 <p class="compound-first">Compound 1, paragraph 1.</p>
 <p class="compound-middle">Compound 1, paragraph 2.</p>
@@ -770,7 +771,7 @@ paragraph.</td>
 </div>
 </div>
 <div class="section">
-<h3><a class="toc-backref" href="#id78" id="parsed-literal-blocks" name="parsed-literal-blocks">2.14.8&nbsp;&nbsp;&nbsp;Parsed Literal Blocks</a></h3>
+<h3><a class="toc-backref" href="#id79" id="parsed-literal-blocks" name="parsed-literal-blocks">2.14.8&nbsp;&nbsp;&nbsp;Parsed Literal Blocks</a></h3>
 <pre class="literal-block">
 This is a parsed literal block.
     This line is indented.  The next line is blank.
@@ -961,9 +962,13 @@ crunchy, now would it?</td>
 </tbody>
 </table>
 </div>
+<div class="section">
+<h2><a class="toc-backref" href="#id70" id="custom-roles" name="custom-roles">2.23&nbsp;&nbsp;&nbsp;Custom Roles</a></h2>
+<p><tt class="custom docutils literal"><span class="pre">one</span></tt> <tt class="custom docutils literal"><span class="pre">two</span></tt> <tt class="custom docutils literal"><span class="pre">three</span></tt></p>
+</div>
 </div>
 <div class="section">
-<h1><a class="toc-backref" href="#id70" id="error-handling" name="error-handling">3&nbsp;&nbsp;&nbsp;Error Handling</a></h1>
+<h1><a class="toc-backref" href="#id71" id="error-handling" name="error-handling">3&nbsp;&nbsp;&nbsp;Error Handling</a></h1>
 <p>Any errors caught during processing will generate system messages.</p>
 <p>There should be five messages in the following, auto-generated
 section, &quot;Docutils System Messages&quot;:</p>
@@ -974,17 +979,17 @@ section, &quot;Docutils System Messages&quot;:</p>
 <div class="system-message" id="id23">
 <p class="system-message-title">System Message: <a name="id23">ERROR/3</a> (<tt class="docutils">functional/input/data/standard.txt</tt>, line 100); <em><a href="#id24">backlink</a></em></p>
 Undefined substitution referenced: &quot;problematic&quot;.</div>
-<div class="system-message" id="id79">
-<p class="system-message-title">System Message: <a name="id79">ERROR/3</a> (<tt class="docutils">functional/input/standalone_rst_html4css1.txt</tt>, line 358); <em><a href="#id80">backlink</a></em></p>
+<div class="system-message" id="id80">
+<p class="system-message-title">System Message: <a name="id80">ERROR/3</a> (<tt class="docutils">functional/input/standalone_rst_html4css1.txt</tt>, line 358); <em><a href="#id81">backlink</a></em></p>
 Unknown target name: &quot;5&quot;.</div>
-<div class="system-message" id="id81">
-<p class="system-message-title">System Message: <a name="id81">ERROR/3</a> (<tt class="docutils">functional/input/data/standard.txt</tt>, line 367); <em><a href="#id82">backlink</a></em></p>
+<div class="system-message" id="id82">
+<p class="system-message-title">System Message: <a name="id82">ERROR/3</a> (<tt class="docutils">functional/input/data/standard.txt</tt>, line 367); <em><a href="#id83">backlink</a></em></p>
 Unknown target name: &quot;nonexistent&quot;.</div>
-<div class="system-message" id="id83">
-<p class="system-message-title">System Message: <a name="id83">ERROR/3</a> (<tt class="docutils">functional/input/data/standard.txt</tt>, line 394); <em><a href="#id84">backlink</a></em></p>
+<div class="system-message" id="id84">
+<p class="system-message-title">System Message: <a name="id84">ERROR/3</a> (<tt class="docutils">functional/input/data/standard.txt</tt>, line 394); <em><a href="#id85">backlink</a></em></p>
 Unknown target name: &quot;hyperlink reference without a target&quot;.</div>
-<div class="system-message" id="id85">
-<p class="system-message-title">System Message: <a name="id85">ERROR/3</a> (<tt class="docutils">functional/input/data/standard.txt</tt>, line 407); <em><a href="#id86">backlink</a></em></p>
+<div class="system-message" id="id86">
+<p class="system-message-title">System Message: <a name="id86">ERROR/3</a> (<tt class="docutils">functional/input/data/standard.txt</tt>, line 407); <em><a href="#id87">backlink</a></em></p>
 Duplicate target name, cannot be used as a unique reference: &quot;duplicate target names&quot;.</div>
 </div>
 </div>
